--- a/src/components/home/Knowledge.astro
+++ b/src/components/home/Knowledge.astro
@@ -5,21 +5,15 @@ const { title, details } = Astro.props as IKnowledges;
 ---
 
 <section
-  class="flex items-start justify-between flex-col sm:flex-row dark:text-light"
+  class="items-start justify-between dark:text-light"
 >
-  <h2 class="w-[15rem] mt-16">{title}</h2>
-  <div class="w-full">
+  <h2 class="w-full mt-16 mb-5">{title}</h2>
+  <div class="w-full grid grid-cols-1 lg:grid-cols-3 md:grid-cols-2 gap-4">
     {
       details.map((item) => (
-        <div class="my-16">
-          <div class="flex justify-between items-center flex-wrap">
-            <h3 class="text-xl font-semibold">{item.name} ({item.percentage}%)</h3>
-          </div>
-          <div class="w-full bg-neutral-200 dark:bg-neutral-600">
-            <div
-              class="progress-grad p-0.5 text-center text-xs font-medium leading-none text-primary-100"
-              style={{width: item.percentage+'%'}}>
-            </div>
+        <div class:list={['my-1.5 px-5 py-5 rounded-md border-2 border-transparent', item.borderColor, 'shadow-md bg-neutral-800']}>
+          <div class="justify-between items-center">
+            <h5 class="font-semibold">{item.name}</h5>
           </div>
           <ul class="mt-3">
             {item.description.map((item) => (
