cambios y actualizaciones de portafolio.

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -12,7 +12,7 @@ const Proyects = info.projects.map((project) => project);
 <html lang="en">
   <head>
     <MetaHead
-      title={"Proyectos"}
+      title={"Projects"}
       description={"Todos los proyectos estan disponibles en esta pagina."}
       ogImageUrl={"/assets/images/profile.png"}
     />
@@ -20,7 +20,7 @@ const Proyects = info.projects.map((project) => project);
 
   <body>
     <Layout>
-      <h1 style="line-height: 1.2;">Proyectos</h1>
+      <h1 style="line-height: 1.2;">Projects</h1>
       <ProjectsWrapper projects={Proyects} />
     </Layout>
   </body>
