cambios en imagenes del portafolio y cambios en botones.

--- a/src/components/general/ProjectsWrapper.astro
+++ b/src/components/general/ProjectsWrapper.astro
@@ -9,19 +9,19 @@ const { projects } = Astro.props as IProjects;
   <button
     type="button"
     onclick="showTab(1)"
-    class="text-gray-900 hover:text-blue border border-blue-600 bg-white hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-full text-base font-medium px-5 py-2.5 text-center me-3 mb-3 dark:border-blue-500 dark:text-blue-500 dark:hover:text-blue dark:hover:bg-blue-500 dark:bg-gray-900 dark:focus:ring-blue-800"
+    class="text-black dark:text-white hover:text-blue border border-blue-600 bg-white dark:bg-dark hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-full text-base font-medium px-5 py-2.5 text-center me-3 mb-3 dark:border-blue-500 dark:text-blue-500 dark:hover:text-blue dark:hover:bg-blue-500 dark:bg-gray-900 dark:focus:ring-blue-800"
     >Web</button
   >
   <button
     type="button"
     onclick="showTab(2)"
-    class="text-gray-900 hover:text-blue border border-blue-600 bg-white hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-full text-base font-medium px-5 py-2.5 text-center me-3 mb-3 dark:border-blue-500 dark:text-blue-500 dark:hover:text-blue dark:hover:bg-blue-500 dark:bg-gray-900 dark:focus:ring-blue-800"
+    class="text-black dark:text-white hover:text-blue border border-blue-600 bg-white dark:bg-dark hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-full text-base font-medium px-5 py-2.5 text-center me-3 mb-3 dark:border-blue-500 dark:text-blue-500 dark:hover:text-blue dark:hover:bg-blue-500 dark:bg-gray-900 dark:focus:ring-blue-800"
     >Mobile Apps</button
   >
   <button
     type="button"
     onclick="showTab(3)"
-    class="text-gray-900 hover:text-blue border border-blue-600 bg-white hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-full text-base font-medium px-5 py-2.5 text-center me-3 mb-3 dark:border-blue-500 dark:text-blue-500 dark:hover:text-blue dark:hover:bg-blue-500 dark:bg-gray-900 dark:focus:ring-blue-800"
+    class="text-black dark:text-white hover:text-blue border border-blue-600 bg-white dark:bg-dark hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-full text-base font-medium px-5 py-2.5 text-center me-3 mb-3 dark:border-blue-500 dark:text-blue-500 dark:hover:text-blue dark:hover:bg-blue-500 dark:bg-gray-900 dark:focus:ring-blue-800"
     >Desktop Apps</button
   >
 </div>
