--- a/src/pages/detail/[id].astro
+++ b/src/pages/detail/[id].astro
@@ -23,6 +23,7 @@ type Props = {
     githubUrl: string;
     liveUrl: string;
     description: string;
+    techUsed: string;
   };
 };
 
@@ -74,7 +75,12 @@ const { project } = Astro.props as Props;
             >
           </p>
           <p class="mb-3 font-normal text-gray-700 dark:text-gray">
+            <strong>Description:</strong><br />
             {project.description}
+          </p>
+          <p class="mb-3 font-normal text-gray-700 dark:text-gray">
+            <strong>Tech used:</strong><br />
+            {project.techUsed}
           </p>
         </div>
       </div>
